src/objects/APTS_UOM_Conversion__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Alternative_Quantity__c</fullName>
        <label>Alternative Quantity</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Alternative_UOM_Descripton__c</fullName>
        <label>Alternative UoM Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Alternative_UOM__c</fullName>
        <label>Alternative UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% On Dry Matter</fullName>
                </value>
                <value>
                    <fullName>% On Original Base</fullName>
                </value>
                <value>
                    <fullName>1/cubic centimeter</fullName>
                </value>
                <value>
                    <fullName>1/cubic meter</fullName>
                </value>
                <value>
                    <fullName>1/minute</fullName>
                </value>
                <value>
                    <fullName>1 / square meter</fullName>
                </value>
                <value>
                    <fullName>Absent/gram</fullName>
                </value>
                <value>
                    <fullName>Absorbance unit</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Activity unit</fullName>
                </value>
                <value>
                    <fullName>Agtron Colour Units</fullName>
                </value>
                <value>
                    <fullName>Ampere</fullName>
                </value>
                <value>
                    <fullName>APHA</fullName>
                </value>
                <value>
                    <fullName>Arc degrees</fullName>
                </value>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>bar</fullName>
                </value>
                <value>
                    <fullName>Barrel</fullName>
                </value>
                <value>
                    <fullName>Basket LOGIFRUIT Large - 6424</fullName>
                </value>
                <value>
                    <fullName>Beam</fullName>
                </value>
                <value>
                    <fullName>Becquerel/kilogram</fullName>
                </value>
                <value>
                    <fullName>Bkry Bobbin</fullName>
                </value>
                <value>
                    <fullName>Bread</fullName>
                </value>
                <value>
                    <fullName>Bkry Bobbin Cakes</fullName>
                </value>
                <value>
                    <fullName>Bkry Bundel</fullName>
                </value>
                <value>
                    <fullName>Bkry Cage</fullName>
                </value>
                <value>
                    <fullName>Bkry Dolly Cart</fullName>
                </value>
                <value>
                    <fullName>Bkry Metal Pal.</fullName>
                </value>
                <value>
                    <fullName>Bkry Plastic Pal.</fullName>
                </value>
                <value>
                    <fullName>Bkry Plastic Pallet USA</fullName>
                </value>
                <value>
                    <fullName>Bkry Sack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Base_Quantity__c</fullName>
        <label>Base Quantity</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Base_UOM_Description__c</fullName>
        <label>Base UoM description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Base_UOM__c</fullName>
        <label>Base UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% On Dry Matter</fullName>
                </value>
                <value>
                    <fullName>% On Original Base</fullName>
                </value>
                <value>
                    <fullName>1/cubic centimeter</fullName>
                </value>
                <value>
                    <fullName>1/cubic meter</fullName>
                </value>
                <value>
                    <fullName>1/minute</fullName>
                </value>
                <value>
                    <fullName>1 / square meter</fullName>
                </value>
                <value>
                    <fullName>Absent/gram</fullName>
                </value>
                <value>
                    <fullName>Absorbance unit</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Activity unit</fullName>
                </value>
                <value>
                    <fullName>Agtron Colour Units</fullName>
                </value>
                <value>
                    <fullName>Ampere</fullName>
                </value>
                <value>
                    <fullName>APHA</fullName>
                </value>
                <value>
                    <fullName>Arc degrees</fullName>
                </value>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>bar</fullName>
                </value>
                <value>
                    <fullName>Barrel</fullName>
                </value>
                <value>
                    <fullName>Basket LOGIFRUIT Large - 6424</fullName>
                </value>
                <value>
                    <fullName>Beam</fullName>
                </value>
                <value>
                    <fullName>Becquerel/kilogram</fullName>
                </value>
                <value>
                    <fullName>Bkry Bobbin</fullName>
                </value>
                <value>
                    <fullName>Bread</fullName>
                </value>
                <value>
                    <fullName>Bkry Bobbin Cakes</fullName>
                </value>
                <value>
                    <fullName>Bkry Bundel</fullName>
                </value>
                <value>
                    <fullName>Bkry Cage</fullName>
                </value>
                <value>
                    <fullName>Bkry Dolly Cart</fullName>
                </value>
                <value>
                    <fullName>Bkry Metal Pal.</fullName>
                </value>
                <value>
                    <fullName>Bkry Plastic Pal.</fullName>
                </value>
                <value>
                    <fullName>Bkry Plastic Pallet USA</fullName>
                </value>
                <value>
                    <fullName>Bkry Sack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Conversion_Factor__c</fullName>
        <formula>APTS_Numerator__c  /  APTS_Denominator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Denominator__c</fullName>
        <label>Denominator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_EAN__c</fullName>
        <label>EAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Numerator__c</fullName>
        <label>Numerator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ProductCode__c</fullName>
        <description>This is the text field which will be filled up with the Material Number.</description>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Active__c</fullName>
        <formula>APTS_Product__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Enabled_for_web_shop_s__c</fullName>
        <formula>APTS_Product__r.APTS_Product_Enabled_for_web_shop_s__c</formula>
        <label>Product Enabled for web shop(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>UOM Conversions</relationshipLabel>
        <relationshipName>UOM_Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_UOM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>UoM External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UOM Conversion</label>
    <nameField>
        <label>UOM Conversion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UOM Conversions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>